--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,7 +19,7 @@
     "password": "!House2004",
     //"port": "22",
     
-    "remote_path": "/public_html/",
+    "remote_path": "/public_html/cv/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
@@ -41,5 +41,5 @@
     //"remote_time_offset_in_hours": 0,
     //"remote_encoding": "utf-8",
     //"remote_locale": "C",
-    //"allow_config_upload": false,
+    "allow_config_upload": true,
 }
